# tafl

./: .pre-commit-config.yaml  Cargo.toml  Readme.md
.github/workflows/: test.yaml
src/: app.rs  board.rs  event.rs  game.rs  main.rs  piece.rs  ui.rs
