[package]
name = "tafl"
description = "Tafl is a family of northern European board games"
license = "Apache-2.0"
repository = "https://github.com/m-ildefons/tafl.git"
version = "0.1.0"
edition = "2021"
authors = [ "Moritz Röhrich <moritz.rohrich@suse.com>" ]
readme = "Readme.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", default-features = false, features = ['termion'] }
termion = { version = "1.5" }
structopt = { version = "0.3", default-features = false }
